k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec: # para especificar como este objeto vai se comportar
  replicas: 1
  selector: # providenciar exatamente qual cluster de pod esse objeto vai providenciar acesso
    matchLabels: # vai procurar procurar por pods dentro do cluster com essa label
      component: redis 
  template: # template dos pods desse deployment
    metadata: # metadata dos pods
      labels: # label para identificação deste dos pods desse deployment
        component: redis
    spec: # para especificar qual container esse pod vai rodar
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379 # porta na qual os containers dos pods estarão escutando dentro do cluster
