k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec: # para especificar como este objeto vai se comportar
  replicas: 1
  selector: # providenciar exatamente qual cluster de pod esse objeto vai providenciar acesso
    matchLabels: # vai procurar procurar por pods dentro do cluster com essa label
      component: worker 
  template: # template dos pods desse deployment
    metadata: # metadata dos pods
      labels: # label para identificação deste dos pods desse deployment
        component: worker 
    spec: # para especificar qual container esse pod vai rodar
      containers:
        - name: worker
          image: harlemmuniz/multi-worker
          # não precisa de port, pois esse container não irá receber requisições
