k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec: # para especificar como este serviço vai se comportar
  type: ClusterIP
  selector: # providenciar exatamente qual cluster de pod esse Serviço vai providenciar acesso
    component: web # vai providenciar acesso aos pods que possuem essa label
  ports:
    - port: 3000 # para acessar esse Service, acessar a porta 3000
      targetPort: 3000 # vai apontar para os pods com a porta 3000  dentro do cluster
