k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec: # para especificar como este serviço vai se comportar
  type: ClusterIP
  selector: # providenciar exatamente qual cluster de pod esse objeto vai providenciar acesso
    component: server # vai providenciar acesso aos pods que possuem essa label
  ports:
    - port: 5000 # para acessar esse Service, acessar a porta 5000
      targetPort: 5000 # vai apontar para os pods com a porta 5000  dentro do cluster
