k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx' # queremos criar um controller baseado no projeto NGINX
    nginx.ingress.kubernetes.io/use-regex: 'true' # usar regex para direcionar erros 404 para localhost
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # como a cópia do NGINX vai se comportar
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - harlem-test-com
        - www.harlem-test.com
      secretName: harlem-test-com # secretName salvo no certificate.yaml
  rules:
    - host: harlem-test.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port: 
                  number: 5000
    - host: www.harlem-test.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port: 
                  number: 5000
